@@ -23,236 +23,214 @@ import org.apache.tomcat.util.buf.ByteChunk;
 import org.apache.tomcat.util.buf.CharChunk;
 
 /**
- * This class provides encode/decode for RFC 2045 Base64 as defined by
- * RFC 2045, N. Freed and N. Borenstein.  <a
- * href="http://www.ietf.org/rfc/rfc2045.txt">RFC 2045</a>:
- * Multipurpose Internet Mail Extensions (MIME) Part One: Format of
+ * This class provides encode/decode for RFC 2045 Base64 as defined by RFC 2045,
+ * N. Freed and N. Borenstein. <a href="http://www.ietf.org/rfc/rfc2045.txt">RFC
+ * 2045</a>: Multipurpose Internet Mail Extensions (MIME) Part One: Format of
  * Internet Message Bodies. Reference 1996
  *
  * @author Jeffrey Rodriguez
  *
- * @deprecated  Use {@link org.apache.tomcat.util.codec.binary.Base64}
- *              This class will be removed in Tomcat 8.
+ * @deprecated Use {@link org.apache.tomcat.util.codec.binary.Base64} This class
+ *             will be removed in Tomcat 8.
  */
 @Deprecated
-public final class  Base64
-{
-    private static final int  BASELENGTH              = 255;
-    private static final int  LOOKUPLENGTH            = 64;
-    private static final int  FOURBYTE                = 4;
-    private static final byte PAD                     = (byte) '=';
-    private static final byte [] base64Alphabet       = new byte[BASELENGTH];
-    private static final byte [] lookUpBase64Alphabet = new byte[LOOKUPLENGTH];
+public final class Base64 {
+	private static final int BASELENGTH = 255;
+	private static final int LOOKUPLENGTH = 64;
+	private static final int FOURBYTE = 4;
+	private static final byte PAD = (byte) '=';
+	private static final byte[] base64Alphabet = new byte[BASELENGTH];
+	private static final byte[] lookUpBase64Alphabet = new byte[LOOKUPLENGTH];
 
-    static
-    {
-        for (int i = 0; i < BASELENGTH; i++ )
-        {
-            base64Alphabet[i] = -1;
-        }
-        for (int i = 'Z'; i >= 'A'; i--)
-        {
-            base64Alphabet[i] = (byte) (i - 'A');
-        }
-        for (int i = 'z'; i>= 'a'; i--)
-        {
-            base64Alphabet[i] = (byte) (i - 'a' + 26);
-        }
-        for (int i = '9'; i >= '0'; i--)
-        {
-            base64Alphabet[i] = (byte) (i - '0' + 52);
-        }
+	static {
+		for (int i = 0; i < BASELENGTH; i++) {
+			base64Alphabet[i] = -1;
+		}
+		for (int i = 'Z'; i >= 'A'; i--) {
+			base64Alphabet[i] = (byte) (i - 'A');
+		}
+		for (int i = 'z'; i >= 'a'; i--) {
+			base64Alphabet[i] = (byte) (i - 'a' + 26);
+		}
+		for (int i = '9'; i >= '0'; i--) {
+			base64Alphabet[i] = (byte) (i - '0' + 52);
+		}
 
-        base64Alphabet['+']  = 62;
-        base64Alphabet['/']  = 63;
+		base64Alphabet['+'] = 62;
+		base64Alphabet['/'] = 63;
 
-        for (int i = 0; i <= 25; i++ )
-            lookUpBase64Alphabet[i] = (byte) ('A' + i);
+		for (int i = 0; i <= 25; i++)
+			lookUpBase64Alphabet[i] = (byte) ('A' + i);
 
-        for (int i = 26,  j = 0; i <= 51; i++, j++ )
-            lookUpBase64Alphabet[i] = (byte) ('a'+ j);
+		for (int i = 26, j = 0; i <= 51; i++, j++)
+			lookUpBase64Alphabet[i] = (byte) ('a' + j);
 
-        for (int i = 52,  j = 0; i <= 61; i++, j++ )
-            lookUpBase64Alphabet[i] = (byte) ('0' + j);
+		for (int i = 52, j = 0; i <= 61; i++, j++)
+			lookUpBase64Alphabet[i] = (byte) ('0' + j);
 
-        lookUpBase64Alphabet[62] = (byte) '+';
-        lookUpBase64Alphabet[63] = (byte) '/';
-    }
+		lookUpBase64Alphabet[62] = (byte) '+';
+		lookUpBase64Alphabet[63] = (byte) '/';
+	}
 
-    /**
-     * Encodes hex octets into Base64.
-     *
-     * @param binaryData Array containing binary data to encode.
-     * @return Base64-encoded data.
-     *
-     * @deprecated  Use {@link DatatypeConverter#printBase64Binary(byte[])}.
-     *              This method will be removed in Tomcat 8.0.x.
-     */
-    @Deprecated
-    public static String encode(byte[] binaryData) {
-        return DatatypeConverter.printBase64Binary(binaryData);
-    }
+	/**
+	 * Encodes hex octets into Base64.
+	 *
+	 * @param binaryData
+	 *            Array containing binary data to encode.
+	 * @return Base64-encoded data.
+	 *
+	 * @deprecated Use {@link DatatypeConverter#printBase64Binary(byte[])}. This
+	 *             method will be removed in Tomcat 8.0.x.
+	 */
+	@Deprecated
+	public static String encode(byte[] binaryData) {
+		return DatatypeConverter.printBase64Binary(binaryData);
+	}
 
-    /**
-     * Decodes Base64 data into octets
-     *
-     * @param base64DataBC Byte array containing Base64 data
-     * @param decodedDataCC The decoded data chars
-     */
-    public static void decode( ByteChunk base64DataBC, CharChunk decodedDataCC)
-    {
-        int start = base64DataBC.getStart();
-        int end = base64DataBC.getEnd();
-        byte[] base64Data = base64DataBC.getBuffer();
-        
-        decodedDataCC.recycle();
-        
-        // handle the edge case, so we don't have to worry about it later
-        if(end - start == 0) { return; }
+	/**
+	 * Decodes Base64 data into octets
+	 *
+	 * @param base64DataBC
+	 *            Byte array containing Base64 data
+	 * @param decodedDataCC
+	 *            The decoded data chars
+	 */
+	public static void decode(ByteChunk base64DataBC, CharChunk decodedDataCC) {
+		int start = base64DataBC.getStart();
+		int end = base64DataBC.getEnd();
+		byte[] base64Data = base64DataBC.getBuffer();
 
-        int      numberQuadruple    = (end - start)/FOURBYTE;
-        byte     b1=0,b2=0,b3=0, b4=0, marker0=0, marker1=0;
+		decodedDataCC.recycle();
 
-        // Throw away anything not in base64Data
+		// handle the edge case, so we don't have to worry about it later
+		if (end - start == 0) {
+			return;
+		}
 
-        int encodedIndex = 0;
-        int dataIndex = start;
-        char[] decodedData = null;
-        
-        {
-            // this sizes the output array properly - rlw
-            int lastData = end - start;
-            // ignore the '=' padding
-            while (base64Data[start+lastData-1] == PAD)
-            {
-                if (--lastData == 0)
-                {
-                    return;
-                }
-            }
-            decodedDataCC.allocate(lastData - numberQuadruple, -1);
-            decodedDataCC.setEnd(lastData - numberQuadruple);
-            decodedData = decodedDataCC.getBuffer();
-        }
+		int numberQuadruple = (end - start) / FOURBYTE;
+		byte b1 = 0, b2 = 0, b3 = 0, b4 = 0, marker0 = 0, marker1 = 0;
 
-        for (int i = 0; i < numberQuadruple; i++)
-        {
-            dataIndex = start + i * 4;
-            marker0   = base64Data[dataIndex + 2];
-            marker1   = base64Data[dataIndex + 3];
+		// Throw away anything not in base64Data
 
-            b1 = base64Alphabet[base64Data[dataIndex]];
-            b2 = base64Alphabet[base64Data[dataIndex +1]];
+		int encodedIndex = 0;
+		int dataIndex = start;
+		char[] decodedData = null;
 
-            if (marker0 != PAD && marker1 != PAD)
-            {
-                //No PAD e.g 3cQl
-                b3 = base64Alphabet[ marker0 ];
-                b4 = base64Alphabet[ marker1 ];
+		{
+			// this sizes the output array properly - rlw
+			int lastData = end - start;
+			// ignore the '=' padding
+			while (base64Data[start + lastData - 1] == PAD) {
+				if (--lastData == 0) {
+					return;
+				}
+			}
+			decodedDataCC.allocate(lastData - numberQuadruple, -1);
+			decodedDataCC.setEnd(lastData - numberQuadruple);
+			decodedData = decodedDataCC.getBuffer();
+		}
 
-                decodedData[encodedIndex]   = (char) ((  b1 <<2 | b2>>4 ) & 0xff);
-                decodedData[encodedIndex + 1] =
-                    (char) ((((b2 & 0xf)<<4 ) |( (b3>>2) & 0xf) ) & 0xff);
-                decodedData[encodedIndex + 2] = (char) (( b3<<6 | b4 ) & 0xff);
-            }
-            else if (marker0 == PAD)
-            {
-                //Two PAD e.g. 3c[Pad][Pad]
-                decodedData[encodedIndex]   = (char) ((  b1 <<2 | b2>>4 ) & 0xff);
-            }
-            else if (marker1 == PAD)
-            {
-                //One PAD e.g. 3cQ[Pad]
-                b3 = base64Alphabet[ marker0 ];
+		for (int i = 0; i < numberQuadruple; i++) {
+			dataIndex = start + i * 4;
+			marker0 = base64Data[dataIndex + 2];
+			marker1 = base64Data[dataIndex + 3];
 
-                decodedData[encodedIndex]   = (char) ((  b1 <<2 | b2>>4 ) & 0xff);
-                decodedData[encodedIndex + 1] =
-                    (char) ((((b2 & 0xf)<<4 ) |( (b3>>2) & 0xf) ) & 0xff);
-            }
-            encodedIndex += 3;
-        }
-    }
+			b1 = base64Alphabet[base64Data[dataIndex]];
+			b2 = base64Alphabet[base64Data[dataIndex + 1]];
 
+			if (marker0 != PAD && marker1 != PAD) {
+				// No PAD e.g 3cQl
+				b3 = base64Alphabet[marker0];
+				b4 = base64Alphabet[marker1];
 
-    /**
-     * Decodes Base64 data into octets
-     *
-     * @param base64DataBC Byte array containing Base64 data
-     * @param decodedDataBC The decoded data bytes
-     */
-    public static void decode( ByteChunk base64DataBC, ByteChunk decodedDataBC)
-    {
-        int start = base64DataBC.getStart();
-        int end = base64DataBC.getEnd();
-        byte[] base64Data = base64DataBC.getBuffer();
-        
-        decodedDataBC.recycle();
-        
-        // handle the edge case, so we don't have to worry about it later
-        if(end - start == 0) { return; }
+				decodedData[encodedIndex] = (char) ((b1 << 2 | b2 >> 4) & 0xff);
+				decodedData[encodedIndex + 1] = (char) ((((b2 & 0xf) << 4) | ((b3 >> 2) & 0xf)) & 0xff);
+				decodedData[encodedIndex + 2] = (char) ((b3 << 6 | b4) & 0xff);
+			} else if (marker0 == PAD) {
+				// Two PAD e.g. 3c[Pad][Pad]
+				decodedData[encodedIndex] = (char) ((b1 << 2 | b2 >> 4) & 0xff);
+			} else if (marker1 == PAD) {
+				// One PAD e.g. 3cQ[Pad]
+				b3 = base64Alphabet[marker0];
 
-        int      numberQuadruple    = (end - start)/FOURBYTE;
-        byte     b1=0,b2=0,b3=0, b4=0, marker0=0, marker1=0;
+				decodedData[encodedIndex] = (char) ((b1 << 2 | b2 >> 4) & 0xff);
+				decodedData[encodedIndex + 1] = (char) ((((b2 & 0xf) << 4) | ((b3 >> 2) & 0xf)) & 0xff);
+			}
+			encodedIndex += 3;
+		}
+	}
 
-        // Throw away anything not in base64Data
+	/**
+	 * Decodes Base64 data into octets
+	 *
+	 * @param base64DataBC
+	 *            Byte array containing Base64 data
+	 * @param decodedDataBC
+	 *            The decoded data bytes
+	 */
+	public static void decode(ByteChunk base64DataBC, ByteChunk decodedDataBC) {
+		int start = base64DataBC.getStart();
+		int end = base64DataBC.getEnd();
+		byte[] base64Data = base64DataBC.getBuffer();
 
-        int encodedIndex = 0;
-        int dataIndex = start;
-        byte[] decodedData = null;
-        
-        {
-            // this sizes the output array properly - rlw
-            int lastData = end - start;
-            // ignore the '=' padding
-            while (base64Data[start+lastData-1] == PAD)
-            {
-                if (--lastData == 0)
-                {
-                    return;
-                }
-            }
-            decodedDataBC.allocate(lastData - numberQuadruple, -1);
-            decodedDataBC.setEnd(lastData - numberQuadruple);
-            decodedData = decodedDataBC.getBuffer();
-        }
+		decodedDataBC.recycle();
 
-        for (int i = 0; i < numberQuadruple; i++)
-        {
-            dataIndex = start + i * 4;
-            marker0   = base64Data[dataIndex + 2];
-            marker1   = base64Data[dataIndex + 3];
+		// handle the edge case, so we don't have to worry about it later
+		if (end - start == 0) {
+			return;
+		}
 
-            b1 = base64Alphabet[base64Data[dataIndex]];
-            b2 = base64Alphabet[base64Data[dataIndex +1]];
+		int numberQuadruple = (end - start) / FOURBYTE;
+		byte b1 = 0, b2 = 0, b3 = 0, b4 = 0, marker0 = 0, marker1 = 0;
 
-            if (marker0 != PAD && marker1 != PAD)
-            {
-                //No PAD e.g 3cQl
-                b3 = base64Alphabet[ marker0 ];
-                b4 = base64Alphabet[ marker1 ];
+		// Throw away anything not in base64Data
 
-                decodedData[encodedIndex]   = (byte) ((  b1 <<2 | b2>>4 ) & 0xff);
-                decodedData[encodedIndex + 1] =
-                    (byte) ((((b2 & 0xf)<<4 ) |( (b3>>2) & 0xf) ) & 0xff);
-                decodedData[encodedIndex + 2] = (byte) (( b3<<6 | b4 ) & 0xff);
-            }
-            else if (marker0 == PAD)
-            {
-                //Two PAD e.g. 3c[Pad][Pad]
-                decodedData[encodedIndex]   = (byte) ((  b1 <<2 | b2>>4 ) & 0xff);
-            }
-            else if (marker1 == PAD)
-            {
-                //One PAD e.g. 3cQ[Pad]
-                b3 = base64Alphabet[ marker0 ];
+		int encodedIndex = 0;
+		int dataIndex = start;
+		byte[] decodedData = null;
 
-                decodedData[encodedIndex]   = (byte) ((  b1 <<2 | b2>>4 ) & 0xff);
-                decodedData[encodedIndex + 1] =
-                    (byte) ((((b2 & 0xf)<<4 ) |( (b3>>2) & 0xf) ) & 0xff);
-            }
-            encodedIndex += 3;
-        }
-    }
+		{
+			// this sizes the output array properly - rlw
+			int lastData = end - start;
+			// ignore the '=' padding
+			while (base64Data[start + lastData - 1] == PAD) {
+				if (--lastData == 0) {
+					return;
+				}
+			}
+			decodedDataBC.allocate(lastData - numberQuadruple, -1);
+			decodedDataBC.setEnd(lastData - numberQuadruple);
+			decodedData = decodedDataBC.getBuffer();
+		}
 
+		for (int i = 0; i < numberQuadruple; i++) {
+			dataIndex = start + i * 4;
+			marker0 = base64Data[dataIndex + 2];
+			marker1 = base64Data[dataIndex + 3];
+
+			b1 = base64Alphabet[base64Data[dataIndex]];
+			b2 = base64Alphabet[base64Data[dataIndex + 1]];
+
+			if (marker0 != PAD && marker1 != PAD) {
+				// No PAD e.g 3cQl
+				b3 = base64Alphabet[marker0];
+				b4 = base64Alphabet[marker1];
+
+				decodedData[encodedIndex] = (byte) ((b1 << 2 | b2 >> 4) & 0xff);
+				decodedData[encodedIndex + 1] = (byte) ((((b2 & 0xf) << 4) | ((b3 >> 2) & 0xf)) & 0xff);
+				decodedData[encodedIndex + 2] = (byte) ((b3 << 6 | b4) & 0xff);
+			} else if (marker0 == PAD) {
+				// Two PAD e.g. 3c[Pad][Pad]
+				decodedData[encodedIndex] = (byte) ((b1 << 2 | b2 >> 4) & 0xff);
+			} else if (marker1 == PAD) {
+				// One PAD e.g. 3cQ[Pad]
+				b3 = base64Alphabet[marker0];
+
+				decodedData[encodedIndex] = (byte) ((b1 << 2 | b2 >> 4) & 0xff);
+				decodedData[encodedIndex + 1] = (byte) ((((b2 & 0xf) << 4) | ((b3 >> 2) & 0xf)) & 0xff);
+			}
+			encodedIndex += 3;
+		}
+	}
 
 }
