@@ -25,60 +25,57 @@ import javax.el.ELException;
 
 import org.apache.el.lang.EvaluationContext;
 
-
 /**
  * @author Jacob Hookom [jacob@hookom.net]
  */
 public final class AstNegative extends SimpleNode {
-    public AstNegative(int id) {
-        super(id);
-    }
+	public AstNegative(int id) {
+		super(id);
+	}
 
-    @Override
-    public Class<?> getType(EvaluationContext ctx)
-            throws ELException {
-        return Number.class;
-    }
+	@Override
+	public Class<?> getType(EvaluationContext ctx) throws ELException {
+		return Number.class;
+	}
 
-    @Override
-    public Object getValue(EvaluationContext ctx)
-            throws ELException {
-        Object obj = this.children[0].getValue(ctx);
+	@Override
+	public Object getValue(EvaluationContext ctx) throws ELException {
+		Object obj = this.children[0].getValue(ctx);
 
-        if (obj == null) {
-            return Long.valueOf(0);
-        }
-        if (obj instanceof BigDecimal) {
-            return ((BigDecimal) obj).negate();
-        }
-        if (obj instanceof BigInteger) {
-            return ((BigInteger) obj).negate();
-        }
-        if (obj instanceof String) {
-            if (isStringFloat((String) obj)) {
-                return new Double(-Double.parseDouble((String) obj));
-            }
-            return Long.valueOf(-Long.parseLong((String) obj));
-        }
-        if (obj instanceof Long) {
-            return Long.valueOf(-((Long) obj).longValue());
-        }
-        if (obj instanceof Double) {
-            return new Double(-((Double) obj).doubleValue());
-        }
-        if (obj instanceof Integer) {
-            return Integer.valueOf(-((Integer) obj).intValue());
-        }
-        if (obj instanceof Float) {
-            return new Float(-((Float) obj).floatValue());
-        }
-        if (obj instanceof Short) {
-            return Short.valueOf((short) -((Short) obj).shortValue());
-        }
-        if (obj instanceof Byte) {
-            return Byte.valueOf((byte) -((Byte) obj).byteValue());
-        }
-        Long num = (Long) coerceToNumber(obj, Long.class);
-        return Long.valueOf(-num.longValue());
-    }
+		if (obj == null) {
+			return Long.valueOf(0);
+		}
+		if (obj instanceof BigDecimal) {
+			return ((BigDecimal) obj).negate();
+		}
+		if (obj instanceof BigInteger) {
+			return ((BigInteger) obj).negate();
+		}
+		if (obj instanceof String) {
+			if (isStringFloat((String) obj)) {
+				return new Double(-Double.parseDouble((String) obj));
+			}
+			return Long.valueOf(-Long.parseLong((String) obj));
+		}
+		if (obj instanceof Long) {
+			return Long.valueOf(-((Long) obj).longValue());
+		}
+		if (obj instanceof Double) {
+			return new Double(-((Double) obj).doubleValue());
+		}
+		if (obj instanceof Integer) {
+			return Integer.valueOf(-((Integer) obj).intValue());
+		}
+		if (obj instanceof Float) {
+			return new Float(-((Float) obj).floatValue());
+		}
+		if (obj instanceof Short) {
+			return Short.valueOf((short) -((Short) obj).shortValue());
+		}
+		if (obj instanceof Byte) {
+			return Byte.valueOf((byte) -((Byte) obj).byteValue());
+		}
+		Long num = (Long) coerceToNumber(obj, Long.class);
+		return Long.valueOf(-num.longValue());
+	}
 }
